// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio组件 快照测试 基本使用 1`] = `
Array [
  <span
    checked={false}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy Hwjyv sinoui-radio"
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy bRDpwF sinoui-radio sinoui-radio--checked"
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
]
`;

exports[`Radio组件 快照测试 带文字单选框 1`] = `
Array [
  <label
    className="sc-AxiKw sc-AxhCb ckpVKb sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy Hwjyv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="sc-AxgMl fUOonX sinoui-radio__input"
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  <label
    className="sc-AxiKw sc-AxhCb ckpVKb sinoui-form-control-label"
  >
    <span
      checked={true}
      className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy bRDpwF sinoui-radio sinoui-radio--checked"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
        className="sc-AxgMl fUOonX sinoui-radio__input"
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>,
]
`;

exports[`Radio组件 快照测试 指定颜色 1`] = `
Array [
  <label
    className="sc-AxiKw sc-AxhCb ldnSgz sinoui-form-control-label"
    disabled={true}
  >
    <span
      checked={false}
      className="sc-AxjAm gIJowi sinoui-base-button sc-AxhUy Hwjyv sinoui-radio sinoui-radio--disabled"
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="sc-AxgMl fUOonX sinoui-radio__input"
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy bRDpwF sinoui-radio sinoui-radio--checked"
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy kxUJCW sinoui-radio sinoui-radio--checked"
    color="secondary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy bEFnvD sinoui-radio sinoui-radio--checked"
    color="error"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy dBOVaW sinoui-radio sinoui-radio--checked"
    color="warning"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy yqQcm sinoui-radio sinoui-radio--checked"
    color="success"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxhUy fFFsNm sinoui-radio sinoui-radio--checked"
    color="info"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
      className="sc-AxgMl fUOonX sinoui-radio__input"
      onChange={[Function]}
      type="radio"
    />
  </span>,
]
`;

exports[`Radio组件 快照测试 设置只读 1`] = `
Array [
  <label
    className="sc-AxiKw sc-AxhCb ldnSgz sinoui-form-control-label"
    disabled={true}
  >
    <span
      checked={false}
      className="sc-AxjAm gIJowi sinoui-base-button sc-AxhUy Hwjyv sinoui-radio sinoui-radio--disabled"
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="sc-AxgMl fUOonX sinoui-radio__input"
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  <label
    className="sc-AxiKw sc-AxhCb ldnSgz sinoui-form-control-label"
    readOnly={true}
  >
    <span
      checked={false}
      className="sc-AxjAm gIJowi sinoui-base-button sc-AxhUy Hwjyv sinoui-radio sinoui-radio--readOnly"
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        className="sc-AxgMl fUOonX sinoui-radio__input"
        onChange={[Function]}
        readOnly={true}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>,
]
`;
